# warsaw_now

./: .env.example  .gitignore  Caddyfile  Makefile  README.md  docker-compose.https.yml  setup.sh
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py  observability.py  ratelimit.py
backend/app/api/: auth.py  avatars.py  routes.py  saved.py  social.py
backend/app/auth/: deps.py  email.py  oauth.py  passwords.py
backend/app/catalog/: db.py  models.py
backend/app/ingestion/: dedup.py  pipeline.py  runner.py  taxonomy.py  wikidata.py
backend/app/ingestion/adapters/: facebook_events.py  places.py
backend/app/llm/: client.py  embeddings.py  intent.py  rerank.py  schemas.py
backend/app/retrieval/: search.py
backend/db/: app-role.sql  init.sql  monitor-role.sql
backend/k8s/: 00-namespace.yml  10-postgres.yml  20-redis.yml  30-api.yml  35-pdb.yml  40-ingress.yml  45-networkpolicies.yml  50-cronjobs.yml  README.md  secret.example.yml
backend/tests/: conftest.py  test_auth_security.py  test_avatars.py  test_email_verify.py  test_rls.py  test_search_gate.py  test_search_integration.py  test_search_resilience.py  test_social_status.py
docker_compose/backend/core/: urls.py  views.py
docs/: deployment.md  hosting-digitalocean.md  hosting-vm.md  local-development.md
frontend/: next.config.ts
frontend/k8s/: web.yml
frontend/src/app/: globals.css  page.tsx
frontend/src/app/item/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/people/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/u/[id]/: page.tsx
frontend/src/components/: EventCard.tsx  Header.tsx  ShareButton.tsx  UserCard.tsx  UserContext.tsx  VerifyPanel.tsx
frontend/src/lib/: api.ts  auth.ts  social.ts
infrastructure/ansible/: ansible.cfg  inventory.do.yml
infrastructure/ansible/group_vars/: all.yml
infrastructure/ansible/roles/common/tasks/: main.yml
infrastructure/ansible/roles/elk/templates/: docker-compose.yml.j2  logstash.conf.j2
infrastructure/ansible/roles/monitoring/templates/: prometheus-stack-values.yml.j2
infrastructure/digitalocean/: .terraform.lock.hcl  backend.tf.example  main.tf  variables.tf  versions.tf
k8s/backend/: deployment.yml
platform/: alerting-rules.yaml  clusterissuer.yaml  coredns-custom.yaml  grafana-dashboard.yaml  grafana-search-analytics.json  grafana-tempo-datasource.yaml  kube-prometheus-stack-values.yaml  otel-collector-values.yaml  postgres-exporter-values.yaml  tempo-values.yaml
