[project]
name = "warsaw-events-backend"
version = "0.1.0"
description = "Backend: prompt-based search for events and places in Warsaw"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic-settings>=2.4",
    "anthropic>=0.40",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "authlib>=1.3",          # Google OAuth (OIDC) client
    "itsdangerous>=2.2",     # signs the Starlette session cookie
    "bcrypt>=4.1",           # password hashing for email/password accounts
    "email-validator>=2.1",  # pydantic EmailStr validation
    "redis>=5",              # per-session search rate limit
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
